--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -41,15 +41,46 @@
 
     console.log({isAdult})
 
+    const allAdults = people.every(person => {
+      const currentYear = (new Date()).getFullYear();
+      return currentYear - person.year >= 19;
+    });
+
+    console.log({allAdults})
+
     // Array.prototype.every() // is everyone 19 or older?
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    // const comment = comments.find((comment) => {
+    //   if(comment.id === 823423)
+    //   return comment
+    // })
+
+    // const comment = comments.filter((comment) => {
+    //   if(comment.id === 823423){
+    //     return comment
+    //   }
+    // })
+
+    // console.log(comment)
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const index = comments.findIndex(comment => comment.id === 823423);
+
+    console.log(index)
+
+    const newArray = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ]
+
+    console.log(newArray)
 
   </script>
 </body>
